# Spotify-Auto-Downloader

./: .cache  .gitignore  README.md  config.yaml.example  pyproject.toml
spotify_auto_dl/: config.py  downloader.py  main.py  state.py
