[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotify-auto-dl"
version = "0.1.0"
description = "Automatically download new releases from your favorite artists using spotdl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spotdl>=4.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
spotify-auto-dl = "spotify_auto_dl.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["spotify_auto_dl"]
