[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-auto-dl"
version = "0.1.2"
description = "Automatically download new releases from your favorite artists using spotdl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spotdl>=4.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "spotipy>=2.23.0",
]

[project.scripts]
spotify-auto-dl = "spotify_auto_dl.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["spotify_auto_dl*"]
